<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD NEW USER"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter user name here..."
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD USER TO FIREBASE DATABASE!" />
</LinearLayout>